# clear_groups_vk

./: .gitignore  README.md  clear_groups.py  pyproject.toml
clear_groups/: clear_groups.py
