[tool.poetry]
name = "clear-groups-vk"
version = "0.1.0"
description = "Simple GUI for automate deleting groups in vk"
authors = ["Sirius-Bell <vlad10game@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "clear_groups"}]

[tool.poetry.dependencies]
python = "^3.11"
pysimplegui = "^4.60.5"
loguru = "^0.7.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^5.8.0", python = ">=3.10,<3.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
